--- a/ARPOC1/index.html
+++ b/ARPOC1/index.html
@@ -18,9 +18,9 @@
 		embedded
         arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
 
-        <a-entity gltf-model="./assets/magnemite/scene.gltf" rotation="0 180 0" scale="0.05 0.05 0.05" gps-entity-place="longitude: -121.864800; latitude: 37.379380;" animation-mixer/>
+        <!--<a-entity gltf-model="./assets/magnemite/scene.gltf" rotation="0 180 0" scale="0.05 0.05 0.05" gps-entity-place="longitude: -121.864800; latitude: 37.379380;" animation-mixer/>-->
         
-        <!--<a-entity gltf-model="./assets/stitch/scene.gltf" scale="0.02 0.02 0.02" gps-entity-place="longitude: -121.864800; latitude: 37.379380;" animation-mixer/>-->
+        <a-entity gltf-model="./assets/stitch/scene.gltf" scale="0.02 0.02 0.02" gps-entity-place="longitude: -121.864800; latitude: 37.379380;" animation-mixer/>
         
         <a-camera gps-camera rotation-reader></a-camera>
 	</a-scene>
