--- a/ARPOC1/index.html
+++ b/ARPOC1/index.html
@@ -22,6 +22,6 @@
         
         <!--<a-entity gltf-model="./assets/stitch/scene.gltf" position="0 -3 0 scale="0.15 0.15 0.15" gps-entity-place="longitude: -121.864800; latitude: 37.379380;" animation-mixer/>-->
         
-        <!--<a-camera gps-camera rotation-reader></a-camera>-->
+        <a-camera gps-camera rotation-reader></a-camera>
 	</a-scene>
 </body>
