--- a/ARPOC1/index.html
+++ b/ARPOC1/index.html
@@ -18,7 +18,7 @@
 		embedded
         arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
 
-        <a-entity gltf-model="./assets/magnemite/scene.gltf" position="0 -3 0" rotation="0 180 0" scale="0.05 0.05 0.05" gps-entity-place="longitude: -121.864800; latitude: 37.379380;" animation-mixer/>
+        <a-entity gltf-model="./assets/magnemite/scene.gltf" position="0 -3 0" rotation="0 180 0" scale="0.05 0.05 0.05" gps-entity-place="longitude: -121.8647584; latitude: 37.3794513;" animation-mixer/>
         
         <!--<a-entity gltf-model="./assets/stitch/scene.gltf" position="0 -3 0 scale="0.15 0.15 0.15" gps-entity-place="longitude: -121.864800; latitude: 37.379380;" animation-mixer/>-->
         
